--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
       <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active d-none d-md-block"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="1" ></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="2" ></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="3" ></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="4" ></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1" class="d-none d" ></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2" class="d-none d"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="3" class="d-none d"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="4" class="d-none d"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
